style.css
/* ... */
img {
  vertical-align: middle;

  width: 50%;
  margin-top: 2em;
  height: 80px;
}

.logo {
  width: 70%;
}

.people{
  width: 30%;
  height: auto;
  margin-top:1em;
  margin-bottom:1em;
  display: inline;
  background-color: transparent;

}

@keyframes floatR {
	0% {
		box-shadow: 0 5px 15px 0px rgba(175,15,255,.3);
		transform: translatex(45px);
    z-index:3;
	}

	33.33% {
		box-shadow: 0 5px 15px 0px rgba(222,63,25,.5);
    transform: translatex(10px);
    z-index: 3;
	}

  66.66% {
    z-index: 2;
	}

	100% {
    box-shadow: 0 5px 15px 0px rgba(175,15,255,.3);
    transform: translatex(45px);
    z-index:2;
	}
}

@keyframes floatL {
  0% {
		box-shadow: 0 5px 15px 0px rgba(175,15,255,.3);
		transform: translatex(-20px);
    z-index:2;
	}

	33.33% {
		box-shadow: 0 5px 15px 0px rgba(222,63,25,.5);
    transform: translatex(10px);
    z-index:2;
	}

  66.66% {
    z-index:3;
	}

	100% {
    box-shadow: 0 5px 15px 0px rgba(175,15,255,.3);
    transform: translatex(-20px);
    z-index:2;
	}
}

  
}


.overlay img {
  display: inline;
  position: relative;
  width:40%;
  opacity:1;
  background-color: transparent;
}

.overlay .floatL {
  animation: floatL 5s infinite;
  animation-iteration-count:infinite;
  transform: translatex(-40px);
  animation-direction: normal;
  height: auto;
  margin-top:2em;
  z-index:1;
}

.overlay .floatR {
  animation: floatR 5s infinite;
  animation-iteration-count:infinite;
  height: auto;
  margin-bottom:3em;
}


.bullets-text {
    padding-left: 70px;
    margin-bottom: .5rem;
    transition: 0.5s;
}

.bullets:before{
background: url(./assets/bullet-arrow-red.png) no-repeat 100% 0;
background-size: contain;
content: "";
width: 50px;
-webkit-transform: translateY(5px);
transform: translateY(5px);
height: 23px;
display: block;
margin-bottom: -23px;
}

.bullets-blue:before{
background: url(./assets/bullet-arrow-blue.png) no-repeat 100% 0;
background-size: contain;
content: "";
width: 50px;
-webkit-transform: translateY(5px);
transform: translateY(5px);
height: 23px;
display: block;
margin-bottom: -23px;
}


#covid { 	font-size: 1.2em; }

@media only screen and (max-width: 600px) {
  h2 {
    font-size: 1.8em;
    font-weight: 800px;
  }

  h3 {
    font-size: 1em;
  }

  h1 {
    font-size: 3em;
    font-weight: 700;
  }

	#covid { 	font-size: 1em; }

  img {
    vertical-align: middle;
    border-style: none;
    width: 150%;
    margin-bottom: 2em;
    height: 80px;
  }

  footer {
    padding: 0em 2em 2em 2em;
    border-Top: 1px solid #5800FF;
    align-content: space-around;
  }

 @media only screen and (min-width: 1000px) {
  	#covid {
      margin-top: -5rem;
    }
  }

  #covid {
  	color: white;
  	padding: 1em;
  	background-color: #9D00FE;
  	margin-bottom: 2em;
  }

  #covid h3{
    margin-top:1em;
  }

  #covid p {margin-bottom: 0;}

